<resources>
    <string name="app_name">Bajakah</string>
    <string name="ip_address">https://erawan.azurewebsites.net/public/api/</string>
    <string name="ip_address_materi">https://erawan.azurewebsites.net/public/materi/</string>
<!--    <string name="ip_address_materi">http://192.168.0.51:8000/materi/</string>-->
    <string name="description">Belajar Bahasa Indonesia\nmelalui Pesona Kalimantan Tengah</string>
    <string name="login">Masuk</string>
    <string name="welcome">Selamat datang di aplikasi Bajakah</string>
    <string name="materi_bahasa">Materi Bahasa Indonesia</string>
    <string name="bahasa_material">Bahasa Indonesia Material</string>
    <string name="menu_utama">Menu Utama</string>
    <string name="central_kalimantan_culture">Central Kalimantan Culture</string>
    <string name="budaya_kalimantan_tengah">Budaya Kalimantan Tengah</string>
    <string name="permainan">Teka-Teki Silang</string>
    <string name="games">Crossword Puzzle</string>
    <string name="pengingat_waktu">Pengingat Waktu</string>
    <string name="time_reminder">Time Reminder</string>
    <string name="kritik_amp_saran"><![CDATA[Kritik & Saran]]></string>
    <string name="feedback_us">Feedback Us!</string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="about_us">About Us</string>
    <string name="about_us_title_id">Apa itu aplikasi "Bajakah"?</string>
    <string name="about_us_content_id">Bajakah adalah sebuah program yang merupakan singkatan dari Belajar Bahasa Indonesia melalui Pesona Kalimantan Tengah. Program ini adalah program yang diinisiasikan oleh Duta Bahasa Kalimantan Tengah 2021 untuk mengajar bahasa Indonesia dan memperkenalkan budaya Kalimantan Tengah. Program ini menggunakan bahan ajar berbasis aplikasi yang dapat mempermudah proses belajar-mengajar selama kegiatan.</string>
    <string name="about_us_title_en">What is "Bajakah" Application?</string>
    <string name="about_us_content_en">Bajakah is a program that stands for Learning Bahasa Indonesia through Pesona of Central Kalimantan. This program is a program initiated by Central Kalimantan Language Ambassador of 2021 to teach Indonesia language and to introduce the culture of Central Kalimantan. This program uses application-based teaching materials that can simplify the teaching-learning process during the activities.</string>
    <string name="about_logo_title_id">Logo Aplikasi Bajakah</string>
    <string name="about_logo_content_id">Tanaman Bajakah merupakan tanaman herbal yang secara empiris digunakan oleh masyarakat suku dayak dalam mengobati berbagai penyakit. Konsep 3 pilar utama tanaman Bajakah berupa akar, pohon, dan ranting yang tumbuh tinggi, kuat, dan kokoh menjadi cita-cita aplikasi Bajakah untuk tumbuh dan memiliki dasar fondasi ilmu yang kuat serta memberikan pengetahuan tanpa batas kepada siapapun.</string>
    <string name="about_logo_title_en">Bajakah Application Logo</string>
    <string name="about_logo_content_en">Bajakah plants are herbal plants that are empirically used by the Dayak people in treating various diseases. The concept of 3 main pillars of Bajakah plants in the form of roots, trees, and twigs that grow tall, strong, and sturdy is the goal of Bajakah applications to grow and have a strong foundation of knowledge and provide unlimited knowledge to anyone.</string>
    <string name="ukbi_adaptif_merdeka">UKBI Adaptif Merdeka</string>
    <string name="image_header">Image Header</string>
    <string name="flag_id">Flag ID</string>
    <string name="flag_en">Flag EN</string>
    <string name="duta_bahasa_kalimantan_tengah_2021">(Duta Bahasa Kalimantan Tengah 2021)</string>
    <string name="central_kalimantan_language_ambassador_2021">(Central Kalimantan Language Ambassador 2021)</string>
    <string name="sandy_ramadhan">Sandy Ramadhan</string>
    <string name="nama_panggilan_sandy_id">Nama panggilan: Sandy</string>
    <string name="nama_panggilan_sandy_en">Nick name: Sandy</string>
    <string name="tempat_tanggal_lahir_sandy_id">Tempat, tanggal lahir: Sampit, 13 Desember 1999</string>
    <string name="tempat_tanggal_lahir_sandy_en">Place and date of birth: Sampit, 13 Desember 1999</string>
    <string name="pos_el_sandy_id">Pos-el: sandyramadhan59@gmail.com</string>
    <string name="pos_el_sandy_en">Email: sandyramadhan59@gmail.com</string>
    <string name="avatar_sandy">Avatar Sandy</string>
    <string name="credit">Credit</string>
    <string name="home_icon_di_desain_oleh_pch_vector_freepik">Home Icon: Di desain oleh pch.vector / Freepik</string>
    <string name="menu_icon_di_desain_oleh_https_www_vecteezy_com">Menu Icon: Di desain oleh https://www.vecteezy.com/</string>
    <string name="logo_instagram">Logo Instagram</string>
    <string name="ikadubas_kalteng">\@ikadubas_kalteng</string>
    <string name="logo_email">Logo Email</string>
    <string name="ikadubaskalteng_gmail_com">ikadubaskalteng@gmail.com</string>
    <string name="winney_amiani">Winney Amiani</string>
    <string name="nama_panggilan_winney_id">Nama panggilan: Winney</string>
    <string name="nama_panggilan_winney_en">Nick name: Winney</string>
    <string name="tempat_tanggal_lahir_winney_id">Tempat, tanggal lahir : Buntok, 13 Agustus 2001</string>
    <string name="tempat_tanggal_lahir_winney_en">Place and date of birth : Buntok, 13 Agustus 2001</string>
    <string name="pos_el_winney_id">Pos-el: winneyamiani@gmail.com</string>
    <string name="pos_el_winney_en">Email: winneyamiani@gmail.com</string>
    <string name="avatar_winney">Avatar Winney</string>
    <string name="berikan_kritik_saran_pada_kolom_di_bawah_ini"><![CDATA[Berikan kritik & saran pada kolom di bawah ini:]]></string>
    <string name="kirim">Kirim</string>
    <string name="email">Email</string>
    <string name="nama">Nama</string>
    <string name="isi_pesan_id">Isi Pesan (ID)</string>
    <string name="isi_pesan_en">Isi Pesan (EN)</string>
    <string name="jam">Jam</string>
    <string name="ulangi_pengingat">Ulangi Pengingat</string>
    <string name="senin">Senin</string>
    <string name="selasa">Selasa</string>
    <string name="rabu">Rabu</string>
    <string name="kamis">Kamis</string>
    <string name="jumat">Jumat</string>
    <string name="sabtu">Sabtu</string>
    <string name="minggu">Minggu</string>
    <string name="simpan">Simpan</string>
</resources>