<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layFeedbackRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.FormReminderActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tlbFormReminder"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/yellow"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_collapseMode="pin"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:subtitleTextColor="@android:color/white"
        app:titleTextColor="@android:color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_large"
                android:layout_marginRight="@dimen/spacing_large"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:text="@string/isi_pesan_id"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <EditText
                android:id="@+id/txtFormReminderPesanId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_large"
                android:layout_marginRight="@dimen/spacing_large"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:autofillHints="Berikan masukan di sini"
                android:ems="10"
                android:gravity="start"
                android:inputType="textLongMessage|textPersonName"
                android:minHeight="48dp"
                android:textSize="14sp"
                tools:ignore="LabelFor,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_large"
                android:layout_marginRight="@dimen/spacing_large"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:text="@string/isi_pesan_en"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <EditText
                android:id="@+id/txtFormReminderPesanEn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_large"
                android:layout_marginRight="@dimen/spacing_large"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:autofillHints="Berikan masukan di sini"
                android:ems="10"
                android:gravity="start"
                android:inputType="textMultiLine|textEmailAddress"
                android:minHeight="48dp"
                android:textSize="14sp"
                tools:ignore="LabelFor,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_large"
                android:layout_marginRight="@dimen/spacing_large"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:text="@string/jam"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TimePicker
                android:id="@+id/tmpFormReminderJam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_marginRight="@dimen/spacing_large"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:timePickerMode="spinner"
                tools:targetApi="lollipop" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_large"
                android:layout_marginRight="@dimen/spacing_large"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:text="@string/ulangi_pengingat"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <CheckBox
                android:id="@+id/chkFormReminderMonday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_large"
                android:layout_marginRight="@dimen/spacing_large"
                android:text="@string/senin" />

            <CheckBox
                android:id="@+id/chkFormReminderTuesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_large"
                android:layout_marginRight="@dimen/spacing_large"
                android:text="@string/selasa" />

            <CheckBox
                android:id="@+id/chkFormReminderWednesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_large"
                android:layout_marginRight="@dimen/spacing_large"
                android:text="@string/rabu" />

            <CheckBox
                android:id="@+id/chkFormReminderThursday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_large"
                android:layout_marginRight="@dimen/spacing_large"
                android:text="@string/kamis" />

            <CheckBox
                android:id="@+id/chkFormReminderFriday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_large"
                android:layout_marginRight="@dimen/spacing_large"
                android:text="@string/jumat" />

            <CheckBox
                android:id="@+id/chkFormReminderSaturday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_large"
                android:layout_marginRight="@dimen/spacing_large"
                android:text="@string/sabtu" />

            <CheckBox
                android:id="@+id/chkFormReminderSunday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_large"
                android:layout_marginRight="@dimen/spacing_large"
                android:layout_marginBottom="@dimen/spacing_large"
                android:text="@string/minggu" />

            <Button
                android:id="@+id/btnFormReminderSimpan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_large"
                android:layout_marginRight="@dimen/spacing_large"
                android:layout_marginBottom="@dimen/spacing_large"
                android:background="@drawable/btn_rounded_primary"
                android:minHeight="48dp"
                android:text="@string/simpan"
                android:textColor="@color/brown"
                app:backgroundTint="@color/yellow_100" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>