<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/yellow"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">

            <ImageView
                android:id="@+id/image_header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image_header"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/background_bajakah"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tlbAboutUs"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/yellow"
        android:clipToPadding="false"
        android:scrollbars="none"
        android:scrollingCache="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/spacing_large"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgAboutUsImageId"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/flag_id"
                    app:srcCompat="@drawable/flag_id" />

                <View
                    android:id="@+id/view"
                    android:layout_width="@dimen/spacing_large"
                    android:layout_height="@dimen/spacing_large" />

                <ImageView
                    android:id="@+id/imgAboutUsImageEn"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/flag_en"
                    app:srcCompat="@drawable/flag_en" />
            </LinearLayout>

            <TextView
                android:id="@+id/lblAboutUsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/about_us_title_id"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@color/brown" />

            <TextView
                android:id="@+id/lblAboutUsContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_marginRight="@dimen/spacing_large"
                android:layout_marginBottom="@dimen/spacing_large"
                android:gravity="center"
                android:text="@string/about_us_content_id"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_large"
                android:layout_marginRight="@dimen/spacing_large"
                android:layout_marginBottom="@dimen/spacing_large"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/spacing_medium">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:gravity="center"
                        android:text="@string/sandy_ramadhan"
                        android:textColor="@color/brown"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textView9"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginBottom="@dimen/spacing_medium"
                        android:gravity="center"
                        android:text="@string/central_kalimantan_language_ambassador_2021"
                        android:textColor="@color/brown"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/textView10"
                        android:layout_alignParentLeft="true"
                        android:layout_marginEnd="@dimen/spacing_xmedium"
                        android:layout_marginRight="@dimen/spacing_xmedium"
                        android:layout_toLeftOf="@id/imageView7"
                        android:orientation="vertical"
                        android:layout_alignParentStart="true"
                        android:layout_toStartOf="@id/imageView7">

                        <TextView
                            android:id="@+id/textView13"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/spacing_medium"
                            android:text="@string/nama_panggilan_sandy"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/spacing_medium"
                            android:text="@string/tempat_tanggal_lahir_sampit_13_desember_1999"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/narahubung_sandyramadhan59_gmail_com"
                            android:textColor="@color/black" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="96dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textView10"
                        android:layout_alignParentRight="true"
                        android:scaleType="fitCenter"
                        tools:srcCompat="@tools:sample/avatars"
                        android:contentDescription="@string/avatar_sandy"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:gravity="center"
                        android:text="@string/winney_amiani"
                        android:textColor="@color/brown"
                        android:textStyle="bold"
                        android:layout_alignParentStart="true" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textView14"
                        android:layout_alignParentLeft="true"
                        android:layout_marginBottom="@dimen/spacing_medium"
                        android:gravity="center"
                        android:text="@string/central_kalimantan_language_ambassador_2021"
                        android:textColor="@color/brown"
                        android:textStyle="bold"
                        android:layout_alignParentStart="true" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/textView15"
                        android:layout_alignParentLeft="true"
                        android:layout_marginEnd="@dimen/spacing_xmedium"
                        android:layout_marginRight="@dimen/spacing_xmedium"
                        android:layout_toLeftOf="@id/imageView8"
                        android:orientation="vertical"
                        android:layout_alignParentStart="true"
                        android:layout_toStartOf="@id/imageView8">

                        <TextView
                            android:id="@+id/textView16"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/spacing_medium"
                            android:textColor="@color/black"
                            android:text="@string/nama_panggilan_winney" />

                        <TextView
                            android:id="@+id/textView17"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/spacing_medium"
                            android:textColor="@color/black"
                            android:text="@string/tempat_tanggal_lahir_buntok_13_agustus_2001" />

                        <TextView
                            android:id="@+id/textView18"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:text="@string/narahubung_winneyamiani_gmail_com" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="96dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textView15"
                        android:layout_alignParentRight="true"
                        android:scaleType="fitCenter"
                        tools:srcCompat="@tools:sample/avatars"
                        android:contentDescription="@string/avatar_winney"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_large"
                android:layout_marginRight="@dimen/spacing_large"
                android:layout_marginBottom="@dimen/spacing_xlarge"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:gravity="center"
                    android:text="@string/credit"
                    android:textColor="@color/brown"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:text="@string/home_icon_di_desain_oleh_pch_vector_freepik"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_icon_di_desain_oleh_https_www_vecteezy_com"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/spacing_medium">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="@dimen/spacing_small"
                    android:layout_marginRight="@dimen/spacing_small"
                    app:srcCompat="@drawable/logo_ig_128"
                    android:contentDescription="@string/logo_instagram" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_medium"
                    android:layout_marginRight="@dimen/spacing_medium"
                    android:text="@string/ikadubas_kalteng" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="@dimen/spacing_small"
                    android:layout_marginRight="@dimen/spacing_small"
                    app:srcCompat="@drawable/logo_email_128"
                    android:contentDescription="@string/logo_email" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ikadubaskalteng_gmail_com" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>